use base64 for verification code